sfdx/force-app/main/default/objects/Credit_Card__c/Credit_Card__c.object-meta.xml
<CustomObject>
    <description>This Custom object stores all the Credit Card details</description>
    <label>Credit Card</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>