sfdx/force-app/main/default/objects/Credit_Card__c/fields/Amount_Utilised__c.field-meta.xml
<CustomField>
    <fullName>Amount_Utilised__c</fullName>
    <description>To store the credit limit utilised for use</description>
    <inlineHelpText>Credit Utilised</inlineHelpText>
    <label>Amount Utilised</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>