sfdx/force-app/main/default/objects/Credit_Card__c/fields/Available_Limit__c.field-meta.xml
<CustomField>
    <fullName>Available_Limit__c</fullName>
    <description>To display the available credit limit that can be utilised</description>
    <formula>Total_Limit__c - Amount_Utilised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available Credit Limit</inlineHelpText>
    <label>Available Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>