sfdx/force-app/main/default/objects/Credit_Card__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>To store the name of the Issuing Bank</description>
    <inlineHelpText>Name of the Issuing Bank</inlineHelpText>
    <label>Bank Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>