sfdx/force-app/main/default/objects/Credit_Card__c/fields/Credit_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Name__c</fullName>
    <description>To store the name of the Credit card</description>
    <inlineHelpText>Name of the Credit Card</inlineHelpText>
    <label>Credit Card Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>