sfdx/force-app/main/default/objects/Credit_Card__c/fields/Total_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Limit__c</fullName>
    <description>To store the total credit limit permissible for the credit card issued</description>
    <inlineHelpText>Total limit of the Credit Card</inlineHelpText>
    <label>Total Limit</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>